deployment/chart/k6pod.yaml
#COPYRIGHT Ericsson 2021
#The copyright to the computer program(s) herein is the property of
#Ericsson Inc. The programs may be used and/or copied only with written
#permission from Ericsson Inc. or in accordance with the terms and
#conditions stipulated in the agreement/contract under which the
#program(s) have been supplied.
apiVersion: v1
kind: Pod
metadata:
  name: k6-testsuite
  labels:
    app: k6-testsuite
spec:
      containers:
        - name: k6base
          image: armdocker.rnd.ericsson.se/proj-eric-oss-dev-test/eric-oss-dmm-app-test:1.0.267-test-1
          imagePullPolicy: IfNotPresent
          command: ['sleep']
          args: ['365d']
          resources: {}
          securityContext:
            allowPrivilegeEscalation: true
            runAsNonRoot: false
            runAsUser: 0
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: k8s-registry-secret
      schedulerName: default-scheduler
      restartPolicy: Never
      securityContext: {}
      terminationGracePeriodSeconds: 30
