deployment/chart/k6-data-catalog-policy.yaml
#COPYRIGHT Ericsson 2021
#The copyright to the computer program(s) herein is the property of
#Ericsson Inc. The programs may be used and/or copied only with written
#permission from Ericsson Inc. or in accordance with the terms and
#conditions stipulated in the agreement/contract under which the
#program(s) have been supplied.

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: k6-eric-oss-data-catalog-policy
  labels:
    app: eric-oss-data-catalog
spec:
  podSelector: {}
  ingress:
    - {}
